--- a/forms.html
+++ b/forms.html
@@ -1,18 +1,16 @@
 <head>
   <title>Form Inputs</title>
   <script src="utility-functions.js"></script>
+  <script src="forms.js"></script>
 </head>
 <body>
   <h1>Form Inputs</h1>
-  <form>
-    <input type="submit" />
-    ###-###-####
-  </form>
-  <div id="outputTag"></div>
+  <hr>
+  <h2>Inputs</h2>
 
   <h3>Buttons</h3>
   <pre>
-    <button onclick="output(' World!')" type="button">Click here</button>
+    <button onclick="output('Hello World!')" type="button">Click here</button>
     <input type="button" value="Click button">
     <input type="submit" value="Add submission">
     <input type="reset" value="Reset form">
@@ -66,8 +64,10 @@
     <input type="submit">
   </form>
 
-  <form>
-    <input required type="password" placeholder="Enter password">
+  <form onsubmit="myProcessForm(event)">
+    <input required name="myPassword" type="password" placeholder="Enter password"><br>
+    <input name="firstname" placeholder="Enter first name"><br>
+    <input name="lastname" placeholder="Enter last name"><br>
     <button type="submit">Submit</button>
   </form>
 
@@ -81,18 +81,17 @@
     <input type="submit">
   </form>
 
-  <script>
-    const car = {};
-    car.color = "blue";
-    car.year = 2022;
-    debugger;
+  <div id="outputTag"></div>
 
-    const groceries = ["tomatoes", "onions", "carrots"];
 
-    output('Position 0 isroceries[0]);
-    output(groceries[2]);
+  <h2>Schedule a Phone Appointment</h2>
+  <form onsubmit="scheduleCall(event)">
+    <label for="date">Date:</label>
+    <input required type="date" id="date" name="date"><br><br>
+    <label for="phone">Phone Number:</label>
+    <input required type="tel" id="phone" name="phone" placeholder="###-###-####" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><br><br>
+    <button type="submit">Schedule Call</button>
+  </form>
 
-    // output('The color is ${car.color}.<br>');
-    // output('The year is ${car.year}.<br>');
-  </script>
+
 </body>
