--- a/semantic-form.html
+++ b/semantic-form.html
@@ -12,7 +12,7 @@
           <label for="phone">Phone:</label>
           <input id="phone" type="tel" /><br />
           <label for="radio-buttons">Rating:</label>
-          <section id="radio-buttons">
+          <section id="radio-buttons" style="display: inline">
             <input id="happy" type="radio" name="rating" /><label
               for="happy"
               aria-label="happy face"
@@ -30,4 +30,4 @@
     </main>
     <footer></footer>
   </body>
-</html>
+  </html>
