--- a/sass.html
+++ b/sass.html
@@ -52,7 +52,7 @@
                 Background image variable
                 ----------------------------
                 <code>
-                $soots: url("images/soots.png");
+                $soots: url("soots.png");
                 
                 .bg-image {
                     background-image: $soots;
@@ -203,7 +203,7 @@
                 <code>
                 @font-face {
                 font-family: "Exo2";
-                src: url("fonts/exo2-regular.otf");
+                src: url("exo2-regular.otf");
                 }
 
                 $primaryFront: "Exo2";
