--- a/styles.html
+++ b/styles.html
@@ -41,7 +41,7 @@
 
             <h4>Add background image</h4>
             <pre> 
-                background-image: url("images/soots.png");
+                background-image: url("soots.png");
                 Add the filename or URL for the image.
             </pre>
             <div class="soots width100 height"></div><hr>
@@ -119,7 +119,7 @@
             
             <h4>Adding multiple background images</h4>
             <pre> 
-                background-image: url("images/soots.png");
+                background-image: url("soots.png");
                 background-image: linear-gradient(white, gray);
                 Add background images to nesting elements.
                 The elements nested deeply will appear in front.
@@ -193,7 +193,7 @@
                 1 is fully visible
             </pre>
             <div class="gradient-basic">
-                <img class="opacity25 height" src="images/soots.png">
+                <img class="opacity25 height" src="soots.png">
             </div><hr>
 
             <h4>display: none vs opacity: 0</h4>
