--- a/test.html
+++ b/test.html
@@ -17,3 +17,28 @@
 
 
 ፈ𒁡𑘄𑐣𒁇𒀀𒀁𑑑𒀐𒀁𒀢𑑐𑘄𑘃𐁇𒁆𒀢𐁇𒀢𒀁𒁇𑘅𒀠𒁆𐁐𑘰𒁑𒀣𒁐𒀁𑐄𒀢𑐣𒀁𑘰𑘰𒁇𒀐𑘰𑑑𒀁𒁑𑘃𒁠𒀑𑐅𑘱𐁆𑘄𐁑𒁠𒁑𒁆𐁑𒀑𑘅𑑐𒁡𒀠𐁆𒀣𐁑𒀑𒀑𒁐𐁐𑑑𑐣𒀁𑘄𒀠𐁇𒁡𒀐𒀢𒀁𑐃𑐣𑘰𑐅𑐣𒁠𐁇𑐃𒁆𒀣𒀣𒁆𑑁𐁇𒀁𑘃𒀢𒀐𑐄𑐄𑘄𒀢𑑐𒁠𑘱𑑁𐁐𒁑𑐣𑘱𒀣𒁠𒀢𒀑𒁡𒀑𒁆𑑁𒀑𒁆𒁆𒀣𒁡𑘄𒁠𒁠𒁇𑐅𑑀𑘰𒀀𒁆𒁇𑑀𒁇𒁆𒀠𒀠𒁇𒁐𒁑𒀢𒀑𒀀𑑑𑘃𑘰𑘰𑑀𑑀𒁇𒀁𐁑𒀐𑘰𒀠𑐣𑐣𑐣𒀑𒁑𑐣𒁑𒀠𑘰𑘃𑘄𒀁𑑑𒀐𒁐𒀁𒁇𒁡𒁡𐁑𒀑𐁆𒀑𑐄𒁇𑘅𑘅𑑐𒁠𑘄𑐅𑐄𒀣𒁠𑐣𑑐𒀐𒀠𒀑𑘰𒀠𑐃𒀁𑑑𒀠𒁑𒁐𑐢𐁆𒀑𑘱𑘃𑐣𑐃𒁆𒀣𒀁𒁠𑘱𑘃𑑑𒀀𑑐𒁠𒀣𒀠𐁑𒁐𒁐𑘰𑘱𑑑𑘱𑘱𒁆𒀀𑘰𒀀𑑑𐁑𒁡
+
+
+
+<pre> 
+    Create a new object from a class
+    -------------------------------
+    <code>
+    const myCar = new MyCar();
+    const myCar2 = new MyCar();
+    const myCar3 = new MyCar();
+
+    myCar2.color = "white";
+    myCar3.year = 2025;
+    </code>
+    The objects start with the properties and values defined by the class.
+    The objects are independent of each other.
+    - The values of their properties can be changed indvidually.
+    Syntax:
+    1. Keyword <code>new</code>
+    2. Name of the class with parentheses after it.
+    3. Store the value
+        - The value is an object created from the class.
+
+    <button onclick="newObject()">Create object from class</button>
+</pre><hr>
