--- a/test.html
+++ b/test.html
@@ -12,6 +12,7 @@
         <p>
             ፈ𒁡𑘄𑐣𒁇𒀀𒀁𑑑𒀐𒀁𒀢𑑐𑘄𑘃𐁇𒁆𒀢𐁇𒀢𒀁𒁇𑘅𒀠𒁆𐁐𑘰𒁑𒀣𒁐𒀁𑐄𒀢𑐣𒀁𑘰𑘰𒁇𒀐𑘰𑑑𒀁𒁑𑘃𒁠𒀑𑐅𑘱𐁆𑘄𐁑𒁠𒁑𒁆𐁑𒀑𑘅𑑐𒁡𒀠𐁆𒀣𐁑𒀑𒀑𒁐𐁐𑑑𑐣𒀁𑘄𒀠𐁇𒁡𒀐𒀢𒀁𑐃𑐣𑘰𑐅𑐣𒁠𐁇𑐃𒁆𒀣𒀣𒁆𑑁𐁇𒀁𑘃𒀢𒀐𑐄𑐄𑘄𒀢𑑐𒁠𑘱𑑁𐁐𒁑𑐣𑘱𒀣𒁠𒀢𒀑𒁡𒀑𒁆𑑁𒀑𒁆𒁆𒀣𒁡𑘄𒁠𒁠𒁇𑐅𑑀𑘰𒀀𒁆𒁇𑑀𒁇𒁆𒀠𒀠𒁇𒁐𒁑𒀢𒀑𒀀𑑑𑘃𑘰𑘰𑑀𑑀𒁇𒀁𐁑𒀐𑘰𒀠𑐣𑐣𑐣𒀑𒁑𑐣𒁑𒀠𑘰𑘃𑘄𒀁𑑑𒀐𒁐𒀁𒁇𒁡𒁡𐁑𒀑𐁆𒀑𑐄𒁇𑘅𑘅𑑐𒁠𑘄𑐅𑐄𒀣𒁠𑐣𑑐𒀐𒀠𒀑𑘰𒀠𑐃𒀁𑑑𒀠𒁑𒁐𑐢𐁆𒀑𑘱𑘃𑐣𑐃𒁆𒀣𒀁𒁠𑘱𑘃𑑑𒀀𑑐𒁠𒀣𒀠𐁑𒁐𒁐𑘰𑘱𑑑𑘱𑘱𒁆𒀀𑘰𒀀𑑑𐁑𒁡
         </p>
+        <footer></footer>
     </body>
 </html>
 
